main content conatainer, svg animation

--- a/src/index.html
+++ b/src/index.html
@@ -18,20 +18,20 @@
 			<h1 class="page-title">Which city are you going to?</h1>
 			<form autocomplete="off">
 				<input type="text" id="city" placeholder="... type a location name">
-				<a id="button" class="btn" href="#cd"><span>Click</span></a>
+				<a id="button" class="btn" href="#"><span>Click</span></a>
 			</form>
 		</div>
 	</header>
 	<div class="container">
-		<!-- <div class="svg-clipped"> -->
-		<!-- <svg id="svg-mask" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+		<div class="svg-clipped">
+		<svg id="svg-mask" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
 				<defs>
 					<clipPath id="svgPath">
 						<circle class="circle" stroke="#000000" stroke-miterlimit="10" cx="35" cy="56" r="80">
 						</circle>
 					</clipPath>
 				</defs>
-			</svg> -->
+			</svg>
 		<div class="content" id="content">
 			<div class="content-right">
 				<div class="content-right-inner">
@@ -40,7 +40,8 @@
 					</div>
 					<div id="destination">
 					</div>
-					<section id="venues">
+					<section id="venues"  class="venue-scene">
+
 					</section>
 				</div>
 			</div>
@@ -54,8 +55,10 @@
 				</div>
 			</div>
 		</div>
-		<!-- </div> -->
+		</div>
 	</div>
 	<footer></footer>
-</body>
+
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
+ --></body>
 </html>
