--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,12 @@
 	<meta charset="utf-8">
 	<title>Venues and Weather App</title>
 </head>
-
 <body>
+	<div class="attractions">
+		<div id="canvas">
+			
+		</div>
+	</div>
 	<header>
 		<div class="hero-bg">
 			<p>
@@ -18,11 +22,34 @@
 			<h1 class="page-title">Which city are you going to?</h1>
 			<form autocomplete="off">
 				<input type="text" id="city" placeholder="... type a location name">
-				<a id="button" class="btn" href="#"><span>Click</span></a>
+				<a id="button" class="btn btn-search" href="#"><span>Click</span></a>
 			</form>
+
 		</div>
 	</header>
 	<div class="container">
+		<div class="content" id="content">
+			<a class="btn btn-expand" href="#"><span id="btnCanvas"></span></a>
+			<div id="contentCanvas"></div>
+			<div class="content-right">
+				<div id="contentRightCanvas"></div>
+				<div class="content-right-inner" >
+					
+					<div class="sectiontitle">
+						<h2><span>Top 8 Attractions in  </span><span id="destination"> </span></h2>
+					</div>
+					<section id="venues"></section>
+				</div>
+			</div>
+			<div class="content-left">
+				<div id="contentLeftCanvas"></div>
+				<div class="content-left-inner">
+					<div class="sectiontitle">
+						<h2><span>7 days forecast for  </span><span id="location"></span></h2>
+					</div>
+					<section id="weather"></section>
+				</div>
+			</div>	</div>
 		<div class="svg-clipped">
 		<svg id="svg-mask" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
 				<defs>
@@ -32,33 +59,7 @@
 					</clipPath>
 				</defs>
 			</svg>
-		<div class="content" id="content">
-			<div class="content-right">
-				<div class="content-right-inner">
-					<div class="sectiontitle">
-						<h2>TOP ATTRACTIONS</h2>
-					</div>
-					<div id="destination">
-					</div>
-					<section id="venues"  class="venue-scene">
-
-					</section>
-				</div>
-			</div>
-			<div class="content-left">
-				<div class="content-left-inner">
-					<div class="sectiontitle">
-						<h2>WEATHER</h2>
-					</div>
-					<section id="weather">
-					</section>
-				</div>
-			</div>
-		</div>
 		</div>
 	</div>
-	<footer></footer>
-
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
- --></body>
-</html>
+ </body>
+ </html>
