hi res device styles, favicon changed

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 			<h1 class="page-title">Which city are you going to?</h1>
 			<form autocomplete="off">
 				<input type="text" id="city" placeholder="... type a location name">
-				<a id="button" class="btn btn-search" href="#"><span>Click</span></a>
+				<a id="button" class="btn btn-search" href="#"><span>Search</span></a>
 			</form>
 
 		</div>
