close button added

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 		</div>
 	</header>
 	<div class="container">
+		<a href="#" id="btnClose" class="btn btn-close"><span>Close</span></a>
 		<div class="content" id="content">
 			<a class="btn btn-expand" href="#"><span id="btnCanvas"></span></a>
 			<div id="contentCanvas"></div>
